# poc-databricks-mcp

./: .gitignore  CREATE_TEMP_TABLE_GUIDE.md  CREATE_TEMP_TABLE_QUICK_REF.md  CREATE_TEMP_TABLE_README.md  DATABRICKS_RESOURCES_SUMMARY.md  FEATURE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  REQUIREMENTS.md  app.yml  claude_desktop_config.json.example  config.example.yml  demo_static_metadata.py  examples_create_temp_table.py  pyproject.toml  requirements.txt  validate_create_temp_table.py  validate_implementation.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: .copilot-instructions.md
.github/agents/: databricks-mcp-dev.md
.github/copilot/instructions/: code-style.md  documentation-standards.md  testing-strategy.md
.github/copilot/skills/: README.md
.github/instructions/: architecture.md
.github/prompts/: mcp-tool-workflow.prompt.md
.github/skills/: README.md
.github/skills/sql-optimizer/: SKILL.md
docs/: DEVELOPER_GUIDE.md  MCP_CONFIGURATION.md  STATIC_METADATA_GUIDE.md
metadata/: README.md
src/databricks_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  errors.py  guardrails.py  jobs.py  logging_utils.py  metadata_loader.py  server.py
src/databricks_mcp/auth/: __init__.py  dependencies.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/scripts/: read_env.py
tests/: test_config.py  test_create_temp_table.py  test_create_temp_view.py  test_guardrails.py  test_metadata_integration.py  test_metadata_loader.py  test_terraform_env_loader.py
(+15 files in other folders)
