[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-mcp"
version = "0.1.0"
description = "Databricks MCP server POC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.14.0",
    "uvicorn>=0.34.2",
    "databricks-sdk>=0.60.0",
    "pydantic>=2",
    "fastmcp>=2.12.5",
    "databricks-sql-connector>=3.0.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

dev = [
    "ruff>=0.8.0",
    "databricks-sdk",
    "databricks-mcp",
    "pytest",
    "requests"
]

[project.scripts]
custom-server = "databricks_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
